add date format

--- a/assets/style.css
+++ b/assets/style.css
@@ -27,10 +27,14 @@
 
 }
 
+.cityCard {
+    width:100%
+}
+
 .card {
     border-style: solid;
-    margin:5%;
-    /* width:10%; */
+    margin:1%;
+    width:20%;
 }
 
 .previousw {
